<resources>
    <string name="app_name">Todo App</string>
    <string name="task_management_amp_nto_do_list"><![CDATA[Task Management &\nTo-Do List]]></string>
    <string name="this_productive_tool_is_designed_to_help_nyou_better_manage_your_task_nproject_wise_conveniently">This productive tool is designed to help\nyou better manage your task \nproject-wise conveniently!</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="add">Add</string>
    <string name="documents">Documents</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello!</string>
    <string name="livia_vaccaro">Livia Vaccaro</string>
    <string name="today">Your today’s task\nalmost done!</string>
    <string name="view_task">View Task</string>
    <string name="progress">85%</string>
    <string name="in_progress">In Progress</string>
    <string name="count_number">6</string>
    <string name="office_project">Office Project</string>
    <string name="grocery_shopping_app_ndesign">Grocery shopping app\ndesign</string>
    <string name="personal_project">Personal Project</string>
    <string name="uber_eats_redesign_nchallange">Uber Eats redesign\nchallange</string>
    <string name="task_groups">Task Groups</string>
    <string name="_23_tasks">23 Tasks</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="input_here">Input here</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="task_group">Task Group</string>
    <string name="priority">Priority</string>
    <string name="daily_project">Daily Project</string>
    <string name="health">Health</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="save_task">Save Task</string>
    <string name="tasks">Tasks</string>
    <string name="time">12:00 AM</string>
</resources>