<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="22dp"
    android:layout_marginTop="28dp"
    android:gravity="center_horizontal">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:src="@drawable/user_profile_picture"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/hello"
                android:textSize="14sp"
                android:textColor="@color/black"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:fontFamily="@font/lexend_deca_semibold"
                android:text="@string/livia_vaccaro"
                android:textSize="19sp"
                android:textColor="@color/black"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/notification"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="102dp"
                android:layout_margin="22dp"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_deca"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lexend_deca_semibold"
                    android:text="@string/view_task"
                    android:textColor="@color/primary"
                    android:textSize="13sp"
                    app:cornerRadius="9dp"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lexend_deca"
                    android:gravity="center"
                    android:text="@string/progress"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextSizeCheck,TextSizeCheck,TextSizeCheck,TextSizeCheck,TextSizeCheck" />

            </RelativeLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/more"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/lexend_deca_semibold"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:text="In Progress" />

</LinearLayout>