<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="28dp"
    android:layout_marginHorizontal="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:importantForAccessibility="no"
            android:src="@drawable/arrow_left"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_deca_semibold"
            android:text="@string/add_project"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/notification"/>
        
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/project_name"
                android:textSize="9sp"
                android:textColor="@color/secondery"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/projectName"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/input_here"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="Autofill,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </LinearLayout>
        
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/description"
                android:textSize="9sp"
                android:textColor="@color/secondery"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/description"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/input_here"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_deca"
        android:text="Due Date"
        android:textSize="14sp"
        android:textColor="@color/black"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="Select Due Datex"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/lexend_deca"
        android:hint="@string/input_here"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnAddProject"
            android:layout_width="331dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/lexend_deca_semibold"
            android:text="@string/add_project"
            android:textSize="19sp"
            app:cornerRadius="14dp"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
    </LinearLayout>
</LinearLayout>